Fix center-align in mobile

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4344,6 +4344,7 @@ nav .brand-logo.center {
 
 @media only screen and (max-width: 992px) {
   nav .brand-logo {
+    visibility: hidden;
     left: 50%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
